styles/results/_DesktopSectionPanel.scss
.DesktopSectionPanel {
  font-family: Lato, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 13px;
  line-height: 16px;

  &__meetings {
    display: flex;
    margin-bottom: 6px;

    & > .WeekdayBoxes {
      margin-right: 24px;
    }

    &--times > span {
      line-height: 20px;
      letter-spacing: 0.25px;
      display: inline-block;
      margin-bottom: 4px;
      text-align: right;
      width: max-content;
    }
  }

  &__meetings:last-child {
    margin-bottom: 0;
  }

  & > td:first-child {
    position: relative;

    & > a {
      position: relative;
    }
  }

  > td:nth-child(3) {
    width: 35%;
  }

  &__green {
    color: #27ae34;
  }

  &__yellow {
    color: #ffbf3d;
  }

  &__red {
    color: #d41b2c;
  }

  .InfoIconTooltip__icon {
    margin-bottom: 8px;
    margin-left: -5px;
  }

  & > td:nth-child(5) {
    > div {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
      width: 25%;
    }

    line-height: 12px;

    & span:nth-child(3) {
      font-style: italic;
    }
  }

  &__notifs {
    display: flex;
    align-items: center;
    justify-content: center;

    .infoIcon {
      cursor: pointer;
      position: relative;
      &:hover .tooltip {
        display: block;
        top: -30px;
        right: -20px;
        background: #338ef1;
        white-space: nowrap;
        & > div {
          border-color: #338ef1 transparent transparent transparent;
          right: 29px;
          top: 24px;
        }
      }
    }

    .signUpSwitch {
      cursor: pointer;
      position: relative;
      &:hover .tooltip {
        display: block;
        bottom: 30px;
        right: -14px;
        background: #338ef1;
        white-space: nowrap;
        & > div {
          border-color: #338ef1 transparent transparent transparent;
          right: 29px;
          top: 24px;
        }
      }
    }
  }
}

